[SBE] $anyElementTrue expression trips tassert with id 4457000 when SBE is on

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 5.0.0-rc0
    • Affects Version/s: None
    • Component/s: Query Execution
    • None
    • Fully Compatible
    • ALL
    • Query Execution 2021-04-19
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Reproduce with the following, against a server where SBE is enabled:

      db.c.drop();
      db.c.insert({});
      db.c.aggregate([{$project: {_id: 0, out: {$anyElementTrue: ["$foo"]}}}])
      

            Assignee:
            David Storch
            Reporter:
            David Storch
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: