SERVER-56106 Prohibit SBE engine if query contains certain agg expressions

This change covers $allElementsTrue, $anyElementTrue,
$isoDayOfWeek, and $log, which were forgotten when the
behavior to fallback to the classic execution engine was
first implemented.